syntax = "proto3";
package calculator;

message SumRequest {
	int32 val1 = 1;
	int32 val2 = 2;
}

message SumResponse {
	int32 result = 1;
}

message PrimeNumberRequest {
	int32 number = 1;
}

message PrimeNumberResponse {
	int32 result = 1;
}

message ComputeAverageRequest {
	int32 val = 1;
}

message ComputeAverageResponse {
	double result = 1;
}


message FindMaximumRequest {
	int32 val = 1;
}

message FindMaximumResponse {
	int32 maximum = 1;
}


service CalculatorService {
	//Unary
	rpc Sum(SumRequest) returns (SumResponse) {}
	
	//Server Streaming
	rpc PrimeNumberDecomposition(PrimeNumberRequest) returns (stream PrimeNumberResponse) {}
	
	//Client Streaming
	rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {}

	//Bi-Directional Streaming
	rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {}
}

